Implement advanced AI behaviors and physics system with ARM NEON optimizations
- Add state-driven AI system with chase/flee/attack/patrol behaviors using ARM NEON intrinsics
  for vectorized distance calculations and movement
- Enhance physics system with swept AABB collision detection and position interpolation
  for smooth movement between frames
- Introduce ARM NEON math extensions (vdivq_f32, SIMD_exp, SIMD_log) for optimized calculations
- Refactor component system to use entity struct in dense arrays for generation-aware lookups
- Improve collision resolution with broad/narrow phase detection and AABB overlap checks
- Add position interpolation system for rendering between physics updates
- Update build configuration to include current directory in header search paths
- Restructure game logic headers into unified game_logic.h interface
- Fix component initialization order in render system
- Add Waypoint component for NPC patrol behavior management
- Implement physics-driven velocity system with NEON-accelerated position updates
- Add collision logging and entity position/velocity getter APIs
- Update AI state transitions based on dynamic player proximity thresholds

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -76,7 +76,7 @@ add_library(${TARGET} SHARED)
 target_sources(${TARGET} PRIVATE ${SOURCE_FILES})
 target_link_options(${TARGET} PRIVATE ${VERSION_SCRIPT_FLAGS})
 target_link_libraries(${TARGET} PRIVATE grey_c_flags memalloc zot)
-target_include_directories(${TARGET} PRIVATE ${ZOT_INSTALL_DIR}/include)
+target_include_directories(${TARGET} PRIVATE ${ZOT_INSTALL_DIR}/include .)
 target_link_directories(${TARGET} PRIVATE ${ZOT_INSTALL_DIR}/lib)
 set_target_properties(${TARGET} PROPERTIES LINK_DEPENDS ${VERSION_SCRIPT})
 if(NOT memalloc_FOUND)
