Refactor project structure and build system
- Renamed project from 'gray' to 'grey' and reorganized source tree
- Added new game executable 'greg' with world initialization
- Improved dependency management using ExternalProject
- Restructured CMake build system for better modularity:
  * Added common configuration in common.cmake
  * Created separate build targets for library and game
  * Implemented proper target export and installation
  * Added support for ARM NEON optimizations
- Enhanced physics system:
  * Fixed component initialization with proper memory allocation
  * Improved swept AABB collision detection
  * Added position interpolation for rendering
- Reduced verbose logging in game loop for performance
- Added systems manager to coordinate system updates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(gray VERSION 2.0 DESCRIPTION "gray")
+project(grey)
 
-set(TARGET gray)
-
-add_subdirectory(source game)
-
-
-# Install targets
-# install(TARGETS ${TARGET} DESTINATION bin)
-# install(FILES ${HEADER_FILES} DESTINATION include)
+add_subdirectory(source)
+add_subdirectory(game)
