Refactor entity system and improve physics calculations
- Added explicit math library linking in CMake for non-MSVC builds
- Simplified world initialization using entity creation helpers
  (person/rock functions)
- Fixed external dependency handling (memalloc/zot) in CMake configuration
- Enhanced component system with:
  - Type-safe entity component setters
  - has_component() checking function
  - Thread safety assertions
- Improved physics system:
  - Fixed SIMD loading in AABB overlap detection
  - Corrected swept AABB max value calculation
  - Optimized position interpolation memory usage
  - Added safety checks for component presence
- Implemented missing entity waypoint setter
- Cleaned up main game loop formatting

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -41,7 +41,8 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInf
     target_compile_options(${TARGET} PRIVATE /Zi /Od /RTC1)
     target_link_options(${TARGET} PRIVATE /DEBUG)
   else()
-    target_compile_options(${TARGET} PRIVATE -g -O0 -fno-omit-frame-pointer)
+    target_compile_options(${TARGET} PRIVATE -g -O0 -fno-omit-frame-pointer -lm)
+    target_link_options(${TARGET} PRIVATE -lm)
   endif()
   if(ENABLE_SANITIZERS AND NOT MSVC)
     target_compile_options(${TARGET} PRIVATE -fsanitize=address -fsanitize=undefined)
