Add SIMD abstraction, event/collision improvements, and Windows networking fixes
- Introduce `simd.h` wrapper to unify NEON/SSE usage and add `neon_2_sse.h`
  include path to CMake.
- Add ENABLE_SANITIZERS option to game and source CMake targets.
- Expand include directories and link against ws2_32 on Windows.
- Remove old Win32 timing code from event_system; add collision_data struct.
- Improve event system formatting, safety checks, and broadcast logic.
- Clean up AI system: use SIMD abstraction, improve state transitions, fix
  constructor attribute usage.
- Fix component system includes and memory operations.
- Add portable networking support (Winsock fallbacks, MSG_CONFIRM guards).
- Rewrite physics system to use new SIMD layer; improve swept AABB detection
  and collision resolution; unify vec4 types.
- Clean up render system and use `simd.h` everywhere.
- General formatting cleanup, consistent brace style, and minor fixes across
  game logic modules.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -12,6 +12,8 @@ include(../common.cmake)
 
 # Option to enable or disable phony main
 option(BUILD_PHONY_MAIN "Build phony main" ON)
+option(ENABLE_SANITIZERS "Enable the sanitizers" OFF)
+
 
 message(STATUS "Compiler: ${CMAKE_C_COMPILER_ID}")
 message(STATUS "System Processor: ${CMAKE_SYSTEM_PROCESSOR}")
@@ -81,8 +83,12 @@ add_library(grey::${TARGET} ALIAS ${TARGET})
 target_include_directories(${TARGET}
   PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_application>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../3rd-party/neon_2_sse>
   $<INSTALL_INTERFACE:include>
 )
+target_link_libraries(${TARGET} PUBLIC ws2_32)
 target_link_libraries(${TARGET} PUBLIC memalloc::memalloc)
 target_link_libraries(${TARGET} PUBLIC zot::zot)
 target_compile_features(${TARGET} PUBLIC c_std_23)
@@ -92,7 +98,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInf
     target_compile_options(${TARGET} PRIVATE /Zi /Od /RTC1)
     target_link_options(${TARGET} PRIVATE /DEBUG)
   else()
-    target_compile_options(${TARGET} PRIVATE -g -O0 -fno-omit-frame-pointer )
+    target_compile_options(${TARGET} PRIVATE -g -O0 -fno-omit-frame-pointer)
   endif()
   if(ENABLE_SANITIZERS AND NOT MSVC)
     target_compile_options(${TARGET} PRIVATE -fsanitize=address -fsanitize=undefined)
