--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -10,6 +10,8 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 
 include(../common.cmake)
 
+option(ENABLE_SANITIZERS "Enable the sanitizers" OFF)
+
 message(STATUS "Compiler: ${CMAKE_C_COMPILER_ID}")
 message(STATUS "System Processor: ${CMAKE_SYSTEM_PROCESSOR}")
 
