--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -52,11 +52,18 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInf
   endif()
 endif()
 
-if((CMAKE_SYSTEM_PROCESSOR MATCHES "arm" OR CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64") AND NOT MSVC)
+if(NOT MSVC)
   include(CheckCCompilerFlag)
-  check_c_compiler_flag("-mfpu=neon" HAS_NEON_FLAG)
-  if(HAS_NEON_FLAG)
-    target_compile_options(${TARGET} PRIVATE -mfpu=neon)
+  if((CMAKE_SYSTEM_PROCESSOR MATCHES "arm" OR CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64"))
+    check_c_compiler_flag("-mfpu=neon" HAS_NEON_FLAG)
+    if(HAS_NEON_FLAG)
+      target_compile_options(${TARGET} PRIVATE -mfpu=neon)
+    endif()
+  else()
+    check_c_compiler_flag("-msse3" HAS_MSSE3)
+    if(HAS_MSSE3)
+      target_compile_options(${TARGET} PRIVATE -msse3 -march=native)
+    endif()
   endif()
 endif()
 
