Enable sanitizers, expand world generation, and add Verlet component
- Enable sanitizers by default across game and source builds; propagate ASAN usage and simplify external dependency configs.
- Add configurable sanitizer toggle to VS Code CMake settings.
- Refactor world entity creation into a generic `character()` helper and expand world generation with borders, platforms, mixed terrain, enemies, and player spawn.
- Introduce dynamic world sprite storage with safe realloc using `zot`.
- Define screen dimensions globally and update renderer to use them; improve render exit behavior and robustness.
- Add new `verlet_component` for physics groundwork and register it in build system.
- Temporarily disable collision resolution logic and guard swept AABB rollback code.
- Minor cleanups (newline fixes, includes, logging).

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 
 include(../common.cmake)
 
-option(ENABLE_SANITIZERS "Enable the sanitizers" OFF)
+option(ENABLE_SANITIZERS "Enable the sanitizers" ON)
 
 message(STATUS "Compiler: ${CMAKE_C_COMPILER_ID}")
 message(STATUS "System Processor: ${CMAKE_SYSTEM_PROCESSOR}")
