Make sanitizers and NEON support compiler-aware; improve portability
- Detect ASan/UBSan support with CheckCCompilerFlag before enabling
- Propagate CMAKE_BUILD_TYPE to external dependencies
- Add NEON-to-SSE fallback for non-ARM builds
- Remove unconditional arm_neon includes
- Clean up component headers and formatting

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -40,6 +40,8 @@ target_link_libraries(${TARGET} PUBLIC m)
 target_link_libraries(${TARGET} PRIVATE grey::grey)
 target_compile_features(${TARGET} PUBLIC c_std_23)
 
+include(CheckCCompilerFlag)
+
 if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
   if(MSVC)
     target_compile_options(${TARGET} PRIVATE /Zi /Od /RTC1)
@@ -48,13 +50,20 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInf
     target_compile_options(${TARGET} PRIVATE -g -O0 -fno-omit-frame-pointer)
   endif()
   if(ENABLE_SANITIZERS AND NOT MSVC)
-    target_compile_options(${TARGET} PRIVATE -fsanitize=address -fsanitize=undefined)
-    target_link_options(${TARGET} PRIVATE -fsanitize=address -fsanitize=undefined)
+    check_c_compiler_flag("-fsanitize=address" HAS_ASAN)
+    if(HAS_ASAN)
+      target_compile_options(${TARGET} PRIVATE -fsanitize=address)
+      target_link_options(${TARGET} PRIVATE -fsanitize=address)
+    endif()
+    check_c_compiler_flag("-fsanitize=undefined" HAS_UBSAN)
+    if(HAS_UBSAN)
+      target_compile_options(${TARGET} PRIVATE -fsanitize=undefined)
+      target_link_options(${TARGET} PRIVATE -fsanitize=undefined)
+    endif()
   endif()
 endif()
 
 if(NOT MSVC)
-  include(CheckCCompilerFlag)
   if((CMAKE_SYSTEM_PROCESSOR MATCHES "arm" OR CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64"))
     check_c_compiler_flag("-mfpu=neon" HAS_NEON_FLAG)
     if(HAS_NEON_FLAG)
