Refactor ECS systems, add force/mass physics, and unify numeric tolerances
- Introduced `force` and `mass components` with supporting APIs, and added a `gravity system` applying forces based on mass.
- Refactored `physics system` to use Euler integration with forces and mass; improved AABB overlap checks using a unified epsilon.
- Centralized floating-point tolerances via `GREY_ZERO` / `GREY_AABB_GAP`, replacing ad-hoc epsilons across AI, physics, and game loop logic.
- Reworked `systems management`: added a dedicated systems manager, explicit system registration (`register_system_update`), and deterministic update ordering.
- Updated `world initialization` to register physics, gravity, rendering, and force-clearing systems; restructured entity creation (sprite/terrain/person).
- Cleaned up `component APIs` (dense/sparse helpers, getters/setters), removed unused streams, and improved safety checks.
- Reorganized source tree (entities vs systems), updated CMake includes/sources accordingly.
- Minor style consistency fixes (braces, formatting) and logging adjustments.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -87,6 +87,8 @@ target_include_directories(${TARGET}
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_application>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/components>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/entities>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/game_logic/systems>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../3rd-party/neon_2_sse>
   $<INSTALL_INTERFACE:include>
 )
